Add admin login backend

--- a/OnlineLaundry/Areas/Admin/Views/Account/Login.cshtml
+++ b/OnlineLaundry/Areas/Admin/Views/Account/Login.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Admin Login";
+﻿@{
+    ViewBag.Title = "Login";
 }
 
 <!DOCTYPE html>
@@ -25,12 +24,13 @@
     <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
-                <form class="login100-form validate-form flex-sb flex-w">
+                <form class="login100-form validate-form flex-sb flex-w" method="post">
+                    @Html.AntiForgeryToken()
                     <span class="login100-form-title p-b-51">
                         Login
                     </span>
 
-
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger", style = "font-size: 0.5rem" })
                     <div class="wrap-input100 validate-input m-b-16" data-validate="Username is required">
                         <input class="input100" type="text" name="username" placeholder="Username">
                         <span class="focus-input100"></span>
@@ -38,7 +38,7 @@
 
 
                     <div class="wrap-input100 validate-input m-b-16" data-validate="Password is required">
-                        <input class="input100" type="password" name="pass" placeholder="Password">
+                        <input class="input100" type="password" name="password" placeholder="Password">
                         <span class="focus-input100"></span>
                     </div>
 
