--- a/OnlineLaundry/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineLaundry/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -13,6 +13,7 @@
 
     <!-- Custom styles for this template-->
     <link href="~/Content/admin/css/sb-admin-2.min.css" rel="stylesheet">
+    @RenderSection("Styles", false)
 
 </head>
 
@@ -394,6 +395,8 @@
     <!-- Page level custom scripts -->
     <script src="~/Scripts/admin/js/demo/chart-area-demo.js"></script>
     <script src="~/Scripts/admin/js/demo/chart-pie-demo.js"></script>
+
+    @RenderSection("Scripts", false)
 
 </body>
 
