Add shopping cart, edit some directories, add sending email, service, order and Authentication

--- a/OnlineLaundry/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineLaundry/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -299,7 +299,7 @@
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@ViewBag.Username</span>
                                 <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
                             </a>
                             <!-- Dropdown - User Information -->
@@ -369,7 +369,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    @Html.ActionLink("Logout", "LogOut", "Account", new { }, new { @class = "btn btn-primary" })
                 </div>
             </div>
         </div>
@@ -377,11 +377,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @*<script src="https://kit.fontawesome.com/dbec5d5e4a.js" crossorigin="anonymous"></script>*@
     @RenderSection("scripts", required: false)
-    <!-- Bootstrap core JavaScript-->
-    @*<script src="~/Scripts//jquery.min.js"></script>
-        <script src="~/Scripts/bootstrap/js/bootstrap.bundle.min.js"></script>*@
 
     <!-- Core plugin JavaScript-->
     <script src="~/Scripts/vendor/jquery-easing/jquery.easing.min.js"></script>
